fix: stretch index page background to the whole height

--- a/styles/langselect.css
+++ b/styles/langselect.css
@@ -1,3 +1,8 @@
+html, body {
+    height: 100%;
+    overflow-y: hidden;
+}
+
 .no-script-lang-icon {
     display: inline-block;
     text-align: center;
